// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot for Calculator and Home Snapshot should match component render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main-container"
      >
        <input
          class="grid-container display"
          placeholder="0"
          readonly=""
          value="0"
        />
        <button
          class="grid-container AC"
          type="button"
        >
          AC
        </button>
        <button
          class="grid-container operations"
          type="button"
        >
          +/-
        </button>
        <button
          class="grid-container procentage"
          type="button"
        >
          %
        </button>
        <button
          class="grid-container divide operation"
          type="button"
        >
          ÷
        </button>
        <button
          class="grid-container seven"
          type="button"
        >
          7
        </button>
        <button
          class="grid-container eight"
          type="button"
        >
          8
        </button>
        <button
          class="grid-container nine"
          type="button"
        >
          9
        </button>
        <button
          class="grid-container multiply operation"
          type="button"
        >
          ×
        </button>
        <button
          class="grid-container four"
          type="button"
        >
          4
        </button>
        <button
          class="grid-container five"
          type="button"
        >
          5
        </button>
        <button
          class="grid-container six"
          type="button"
        >
          6
        </button>
        <button
          class="grid-container minus operation"
          type="button"
        >
          -
        </button>
        <button
          class="grid-container one"
          type="button"
        >
          1
        </button>
        <button
          class="grid-container two"
          type="button"
        >
          2
        </button>
        <button
          class="grid-container three"
          type="button"
        >
          3
        </button>
        <button
          class="grid-container plus operation"
          type="button"
        >
          +
        </button>
        <button
          class="grid-container zero"
          type="button"
        >
          0
        </button>
        <button
          class="grid-container period"
          type="button"
        >
          .
        </button>
        <button
          class="grid-container equal operation"
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main-container"
    >
      <input
        class="grid-container display"
        placeholder="0"
        readonly=""
        value="0"
      />
      <button
        class="grid-container AC"
        type="button"
      >
        AC
      </button>
      <button
        class="grid-container operations"
        type="button"
      >
        +/-
      </button>
      <button
        class="grid-container procentage"
        type="button"
      >
        %
      </button>
      <button
        class="grid-container divide operation"
        type="button"
      >
        ÷
      </button>
      <button
        class="grid-container seven"
        type="button"
      >
        7
      </button>
      <button
        class="grid-container eight"
        type="button"
      >
        8
      </button>
      <button
        class="grid-container nine"
        type="button"
      >
        9
      </button>
      <button
        class="grid-container multiply operation"
        type="button"
      >
        ×
      </button>
      <button
        class="grid-container four"
        type="button"
      >
        4
      </button>
      <button
        class="grid-container five"
        type="button"
      >
        5
      </button>
      <button
        class="grid-container six"
        type="button"
      >
        6
      </button>
      <button
        class="grid-container minus operation"
        type="button"
      >
        -
      </button>
      <button
        class="grid-container one"
        type="button"
      >
        1
      </button>
      <button
        class="grid-container two"
        type="button"
      >
        2
      </button>
      <button
        class="grid-container three"
        type="button"
      >
        3
      </button>
      <button
        class="grid-container plus operation"
        type="button"
      >
        +
      </button>
      <button
        class="grid-container zero"
        type="button"
      >
        0
      </button>
      <button
        class="grid-container period"
        type="button"
      >
        .
      </button>
      <button
        class="grid-container equal operation"
        type="button"
      >
        =
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot for Calculator and Home Snapshot should match component render 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <h1>
          Home Page
        </h1>
        <p>
          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci accusantium, similique at, aliquid nemo non consequatur corrupti quas ab doloribus nesciunt minus corporis? Obcaecati, dicta ea fugiat iste saepe iure!
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <h1>
        Home Page
      </h1>
      <p>
        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci accusantium, similique at, aliquid nemo non consequatur corrupti quas ab doloribus nesciunt minus corporis? Obcaecati, dicta ea fugiat iste saepe iure!
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
